--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@ body {
 
 .main {
 	background-color: white;
+	display: flex;
 	margin-top: 110px;
 	padding-left: 100px;
 	min-width: 1200px;
@@ -59,8 +60,7 @@ body {
 }
 
 .text {
-	background-color: #fff;
-	position: absolute;
-	height: 400px;
+	position: fixed;
+	height: 100px;
 	width: 450px;
 }
